# digitaltwinMA

./: 00_MyJoghurt_ProcessAAS.aasx  01FrankaRobotAAS.py  01_FrankaEmika_Robot_Arm_AAS.aasx  02StorageZoneAAS.py  06_Bottle_Switch_AAS.aasx  6666666.aasx  AAS2DTDL2.py  AAS2DTDLziyu.py  ERROR connection with MyJ.docx  HBFG_Software.sln  Program 20.06.cs  Program.cs  Program_uploadfranka.cs  Programtest.cs  README.md  bottleplacing_control.cpp  myJoghurt_ziyu.usd  test.py
AAS/: 02_Storage_Zone_AAS.aasx  03myJoghurtProductsAAS.py  04LinearGuideAxisAAS.py  05TransportConveyorAAS.py
AAS2DTDL/: AAS2DTDL2.py
CSCMQTTIssacSim/: Program_UploadMqttdata.cs
CSClient/: ForwardHelper.cs
CSClientProcess/: Program.cs
CSClient_Omniverse/: Program.cs
UploadAzureGraph/: Program.cs  Program_uploadfranka.cs  UploadAzureGraph.sln  uploadDTtoAzure.csproj
aasCreations/: 00_MyJoghurt_ProcessAAS.aasx  01FrankaRobotAAS.py  01_FrankaEmika_Robot_Arm_AAS.aasx  02StorageZoneAAS.py  02_Storage_Zone_AAS.aasx  03_myJoghurt_Products_AAS.aasx  03myJoghurtProductsAAS.py  04LinearGuideAxisAAS.py  04_Linear_Guide_Axis_AAS.aasx  05TransportConveyorAAS.py  05_Transport_Band_Conveyor_AAS.aasx  AAS2DTDLziyu.py  (+2 more)
robotControlProgram/: CMakeLists.txt
robotControlProgram/libfranka/: FrankaConfigVersion.cmake  Makefile  cmake_install.cmake
robotControlProgram/libfranka/common/: Makefile  cmake_install.cmake
robotControlProgram/libfranka/examples/: CMakeLists.txt  cmake_install.cmake
robotControlProgram/src/: bottleplacing.cpp  bottleplacingloopFetchbottle.cpp  bottleplacingloopPICKPALCEbottle.cpp
(+923 files in other folders)
